<?xml version="1.0"?>
<package format="2">
  <name>dmvio_ros</name>
  <version>0.0.1</version>
  <description>ROS driver for DM-VIO: Delayed Marginalization Visual-Inertial Odometry</description>

  <maintainer email="lukas.stumberg@tum.de">Lukas von Stumberg</maintainer>

  <license>GPLv3</license>

  <url type="website">https://vision.in.tum.de/dm-vio</url>


  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>


  <export>

  </export>
</package>
